--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,17 @@
 <resources>
-    <string name="app_name">AndroidProject</string>
+    <string name="app_name">GalleME</string>
     <string name="title_activity_welcome">Home Screen</string>
     <string name="next">NEXT</string>
     <string name="skip">SKIP</string>
     <string name="start">GOT IT</string>
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
-    <string name="slide_1_title">Welcome</string>
-    <string name="slide_1_desc">With GalleME\\n You can present your friends with your trip!</string>
-    <string name="slide_2_title">MAYBE</string>
-    <string name="slide_2_desc">Maybe DESC</string>
-    <string name="slide_3_title">Slide 3 Title</string>
-    <string name="slide_3_desc">Slide 3 DESC</string>
-    <string name="slide_4_title">Slide 4 Title</string>
-    <string name="slide_4_desc">Slide 4 Desc</string>
+    <string name="slide_1_desc">With GalleME You can present your friends with your personal gallery!</string>
+    <string name="slide_2_desc">Please make sure Google speech-to-text is installed here:</string>
+    <string name="slide_3_desc">Please grant the permissions to access your gallery and microphone on the next screen. GalleME will be unable to function properly without doing so</string>
+    <string name="slide_4_desc">You\'re all done setting up! \nIf you\'ve granted the required permissions, the \"GOT IT\" button will be available to start enjoying GalleME!</string>
     <string name="keyword_view">Here will be shown all keywords currently displayed</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
